# DBFox

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  build_sidecar.py  conftest.py  databox_demo.db  databox_local.db  debug_approval.py  dev.ps1  dev.sh  package-lock.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run_desktop.py  start.py  tmp_tables.json
.agent_eval/: .gitignore  README.md  check_eval_env.py  config.local.example.json  eval_report.md  eval_summary.json  quick_agent_run.py  run_agent_eval.py  spider_import_mysql.py  start_eval_backend.py  start_eval_farm.py
.codegraph/: .gitignore  daemon.pid
.github/: dependabot.yml
artifacts/: README.md  spider_baseline.json  spider_databox.json  spider_dbfox.json  spider_dbfox_test.json  spider_fake.json
databox-mysql-ssl-test/: docker-compose.yml  generate_certs.py  verify_connections.py
desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  wix-template.wxs
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  sidecar_log.rs
docs/: 2026-07-11-code-review-and-remediation.md  README.md  agent-analysis-workbench.md  agent_runtime_design.md  architecture-code-review-2026-05-23.md  architecture-design-document.md  architecture-evaluation.md  backend_learning_guide.md  deep_research_report.md  (+5 more)
(+1309 files in other folders)
