
[package]
name = "dbfox"
version = "1.0.2"
description = "DBFox - AI-powered Database Client"
authors = ["DBFox"]
edition = "2021"
rust-version = "1.95"

[lib]
name = "dbfox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
